--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8"/>
     <title>CRISP</title>
-    <link rel="icon" href="./Logo.svg" type="image/icon type">
+    <link rel="icon" href="./favicon.svg" type="image/svg">
+    <link rel="mask-icon" href="./favicon.svg" type="image/svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: black">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
